# agent-browser-cli

./: AI_INSTALL.md  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: publish.yml  release.yml
assets/tmwd_cdp_bridge/: background.js  content.js  manifest.json
scripts/: package-platform.mjs
skills/agent-browser-cli/: SKILL.md
skills/agent-browser-cli/references/: operations.md
src/: cli.rs  config.rs  protocol.rs  server.rs
tests/fixtures/: p1.html
