[package]
name = "agent-browser-cli"
version = "0.2.3"
edition = "2021"
license = "MIT"

[[bin]]
name = "agent-browser-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "ws"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
html5ever = "0.27"
libc = "0.2"
markup5ever_rcdom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.18", features = ["v4"] }
